QQmlListModel: Do not crash or leak when querying inner models

The list models can be nested, and inner models don't necessarily have a
layout. Also, we need to release any worker agents we reference.

Pick-to: 6.8 6.5 5.15
Fixes: QTBUG-136127
Change-Id: Ibedefce2a1d6783169e754fbf083099d050dceb1
Reviewed-by: Olivier De Cannière <olivier.decanniere@qt.io>
Reviewed-by: Sami Shalayel <sami.shalayel@qt.io>
(cherry picked from commit e37daba8cfdeaa8550c7aba2e1137ab4d4addf45)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>